--- a/ui/app/styles/sticky-footer-navbar.css
+++ b/ui/app/styles/sticky-footer-navbar.css
@@ -14,7 +14,7 @@ body {
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 60px;
-  background-color: #2f2f2f; /* #f5f5f5 #2f2f2f */
+  background-color: white; /* #f5f5f5 #2f2f2f */
 }
 
 /* Custom page CSS
@@ -26,7 +26,7 @@ body > .container {
 }
 .container .text-muted {
   margin: 20px 0;
-  color: #1abc9c;
+  color: #333333;
 }
 
 .footer > .container {
