change the Bootstrap navbar breakpoint

--- a/ui/app/views/uploader.html
+++ b/ui/app/views/uploader.html
@@ -26,7 +26,7 @@
             <div class="file-upload-note">{{note}}</div>
           </div>
           <div style="margin-left:20px;">
-            <div class="file-upload-button-wrapper btn btn-success">
+            <div class="file-upload-button-wrapper btn btn-primary">
               <span>Choose File</span>
               <input type="file" name="data" onchange="angular.element(this).scope().onFileSelected(this.files)" />
             </div>
