--- a/ui/app/views/home.html
+++ b/ui/app/views/home.html
@@ -1,11 +1,12 @@
 <div class="row">
-  <div class="col-md-6">
-    <span class="view-title">Welcome to MarkLogic Online Reporting</span>
+  <div class="col-md-12">
+    <span class="view-title">Welcome to Analytics Dashboard</span>
 
-    <p>MarkLogic Reports is an online reporting and business intelligence 
+    <p>Analytics Dashboard is an online reporting and business intelligence 
        service that helps you easily analyze your business data, and create 
-       insightful reports & dashboards for informed decision-making. It allows 
-       you to easily create and share powerful reports in minutes from MarkLogic database.
+       insightful reports for informed decision-making. It allows you to 
+       easily create and share powerful reports in minutes from MarkLogic 
+       database.
     </p>
 
     <p><b>Monthly Claims 2015 vs. 2014</b><p>
